fix: enforce room capacity and data integrity