@@ -13,9 +13,8 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import java.util.Collections;
+
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class RoomService {
@@ -33,26 +32,26 @@ public class RoomService {
     }
 
     @Transactional(readOnly = true)
-    public PageResponse<RoomResponseDTO> searchRooms(Long hotelId, String status, String keyword, Pageable pageable) {
-        Page<Room> page = roomRepository.searchRooms(hotelId, status, keyword, pageable);
+    public PageResponse<RoomResponseDTO> searchRooms(
+            Long hotelId, String status, String keyword, Pageable pageable) {
+        Page<Room> page = roomRepository.searchRooms(
+                hotelId, normalizeStatus(status, true), normalize(keyword), pageable);
         return PageResponse.fromPage(page.map(this::mapToRoomResponse));
     }
 
     @Transactional(readOnly = true)
     public RoomDetailDTO getRoomDetail(Long roomId) {
-        Room room = roomRepository.findById(roomId)
-                .orElseThrow(() -> new ResourceNotFoundException("Room not found"));
-
+        Room room = findRoom(roomId);
         List<String> images = roomImageRepository.findByRoomId(roomId).stream()
-                .map(img -> img.getImageUrl())
-                .collect(Collectors.toList());
-
+                .map(image -> image.getImageUrl())
+                .toList();
         return RoomDetailDTO.builder()
                 .id(room.getId())
                 .hotelId(room.getHotel().getId())
                 .roomNumber(room.getRoomNumber())
                 .type(room.getType().name())
                 .price(room.getPrice())
+                .capacity(room.getCapacity())
                 .description(room.getDescription())
                 .status(room.getStatus())
                 .images(images)
@@ -60,57 +59,77 @@ public class RoomService {
     }
 
     @Transactional
-    public RoomResponseDTO createRoom(RoomCreateDTO createDTO) {
-        Hotel hotel = hotelRepository.findById(createDTO.getHotelId())
+    public RoomResponseDTO createRoom(RoomCreateDTO dto) {
+        Hotel hotel = hotelRepository.findById(dto.getHotelId())
                 .orElseThrow(() -> new ResourceNotFoundException("Hotel associated not found"));
-
-        RoomType type;
-        try {
-            type = RoomType.valueOf(createDTO.getType().toUpperCase());
-        } catch (IllegalArgumentException e) {
-            throw new BadRequestException("Invalid room type. Choose SINGLE, DOUBLE, SUITE, or DELUXE");
+        String number = dto.getRoomNumber().trim();
+        if (roomRepository.existsByHotelIdAndRoomNumberIgnoreCase(hotel.getId(), number)) {
+            throw new BadRequestException("Room number already exists in this hotel");
         }
-
         Room room = Room.builder()
                 .hotel(hotel)
-                .roomNumber(createDTO.getRoomNumber())
-                .type(type)
-                .price(createDTO.getPrice())
-                .description(createDTO.getDescription())
-                .status(createDTO.getStatus())
+                .roomNumber(number)
+                .type(parseType(dto.getType()))
+                .price(dto.getPrice())
+                .capacity(dto.getCapacity())
+                .description(dto.getDescription())
+                .status(normalizeStatus(dto.getStatus(), false))
                 .build();
-
-        Room savedRoom = roomRepository.save(room);
-        return mapToRoomResponse(savedRoom);
+        return mapToRoomResponse(roomRepository.save(room));
     }
 
     @Transactional
-    public RoomResponseDTO updateRoom(Long roomId, RoomUpdateDTO updateDTO) {
-        Room room = roomRepository.findById(roomId)
-                .orElseThrow(() -> new ResourceNotFoundException("Room not found"));
-
-        RoomType type;
-        try {
-            type = RoomType.valueOf(updateDTO.getType().toUpperCase());
-        } catch (IllegalArgumentException e) {
-            throw new BadRequestException("Invalid room type. Choose SINGLE, DOUBLE, SUITE, or DELUXE");
+    public RoomResponseDTO updateRoom(Long roomId, RoomUpdateDTO dto) {
+        Room room = findRoom(roomId);
+        String number = dto.getRoomNumber().trim();
+        if (roomRepository.existsByHotelIdAndRoomNumberIgnoreCaseAndIdNot(
+                room.getHotel().getId(), number, roomId)) {
+            throw new BadRequestException("Room number already exists in this hotel");
         }
-
-        room.setRoomNumber(updateDTO.getRoomNumber());
-        room.setType(type);
-        room.setPrice(updateDTO.getPrice());
-        room.setDescription(updateDTO.getDescription());
-        room.setStatus(updateDTO.getStatus());
-
-        Room savedRoom = roomRepository.save(room);
-        return mapToRoomResponse(savedRoom);
+        room.setRoomNumber(number);
+        room.setType(parseType(dto.getType()));
+        room.setPrice(dto.getPrice());
+        room.setCapacity(dto.getCapacity());
+        room.setDescription(dto.getDescription());
+        room.setStatus(normalizeStatus(dto.getStatus(), false));
+        return mapToRoomResponse(roomRepository.save(room));
     }
 
     @Transactional
     public void deleteRoom(Long roomId) {
-        Room room = roomRepository.findById(roomId)
+        roomRepository.delete(findRoom(roomId));
+    }
+
+    private Room findRoom(Long id) {
+        return roomRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Room not found"));
-        roomRepository.delete(room);
+    }
+
+    private RoomType parseType(String value) {
+        try {
+            return RoomType.valueOf(value.toUpperCase());
+        } catch (RuntimeException ex) {
+            throw new BadRequestException(
+                    "Invalid room type. Choose SINGLE, DOUBLE, SUITE, or DELUXE");
+        }
+    }
+
+    private String normalizeStatus(String value, boolean optional) {
+        if (value == null || value.isBlank()) {
+            if (optional) {
+                return null;
+            }
+            throw new BadRequestException("Status is required");
+        }
+        String status = value.trim().toLowerCase();
+        if (!status.equals("active") && !status.equals("inactive")) {
+            throw new BadRequestException("Status must be active or inactive");
+        }
+        return status;
+    }
+
+    private String normalize(String value) {
+        return value == null || value.isBlank() ? null : value.trim();
     }
 
     private RoomResponseDTO mapToRoomResponse(Room room) {
@@ -120,6 +139,7 @@ public class RoomService {
                 .roomNumber(room.getRoomNumber())
                 .type(room.getType().name())
                 .price(room.getPrice())
+                .capacity(room.getCapacity())
                 .description(room.getDescription())
                 .status(room.getStatus())
                 .build();
